<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp">

    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_alignParentTop="@string/property_true">
    	
		<TextView
		    android:layout_centerHorizontal="@string/property_true"
		    android:id="@+id/text_explore"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:fontFamily="sans-serif"
		    android:textColor="#0099CC"
		    android:textSize="40sp" 
		    android:text="@string/content_explore"/>
    
		<Button
		    android:layout_below="@id/text_explore"
		    android:layout_centerHorizontal="@string/property_true"
		    android:id="@+id/text_lakes"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:fontFamily="sans-serif-light"
		    android:textColor="#ffffff"
		    android:textSize="35sp"
		    android:textStyle="italic" 
		    android:text="@string/content_lakes"
		    android:onClick="onClickLakesButton"
		    android:clickable="@string/property_true"
		    android:background="#0099CC"
		    android:paddingRight="6sp"
		    android:paddingLeft="6sp"/>
		
		<Button
		    android:layout_below="@id/text_lakes"
		    android:layout_centerHorizontal="@string/property_true"
		    android:id="@+id/text_fish"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:fontFamily="sans-serif-light"
		    android:textColor="#ffffff"
		    android:background="#0099CC"
		    android:textSize="35sp"
		    android:textStyle="italic" 
		    android:text="@string/content_fish"
		    android:onClick="onClickFishButton"
		    android:clickable="@string/property_true"/>
		
		<Button
		    android:layout_below="@id/text_lakes"
		    android:layout_centerHorizontal="@string/property_true"
		    android:id="@+id/text_fish"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:fontFamily="sans-serif-light"
		    android:textColor="#ffffff"
		    android:background="#0099CC"
		    android:textSize="35sp"
		    android:textStyle="italic" 
		    android:text="@string/content_fish"
		    android:onClick="onClickFishButton" 
		    android:clickable="@string/property_true"/>
		
	</RelativeLayout>
	
    <Button
        android:id="@+id/what_is"
    	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="@string/property_true"
		android:text="@string/content_what_is"
		android:fontFamily="sans-serif-light"
	    android:textColor="#ffffff"
	    android:background="#0099CC"
	    android:textSize="35sp"
	    android:textStyle="italic"
	    android:paddingLeft="10sp"
	    android:paddingRight="10sp"
	    android:paddingBottom="5sp"
	    android:onClick="onClickWhatIs"/>
    	
    	
    	
</RelativeLayout>
